tests/baselines/reference/privateNamesUnique-2(strict=true).errors.txt
a.ts(2,5): error TS7008: Member '#x' implicitly has an 'any' type.
a.ts(4,15): error TS18013: Property '#x' is not accessible outside class 'Foo' because it has a private identifier.
b.ts(2,5): error TS7008: Member '#x' implicitly has an 'any' type.


==== a.ts (2 errors) ====
    export class Foo {
        #x;
        ~~
!!! error TS7008: Member '#x' implicitly has an 'any' type.
        copy(other: import("./b").Foo) {
            other.#x; // error
                  ~~
!!! error TS18013: Property '#x' is not accessible outside class 'Foo' because it has a private identifier.
        }
    }
        
==== b.ts (1 errors) ====
    export class Foo {
        #x;
        ~~
!!! error TS7008: Member '#x' implicitly has an 'any' type.
    }
    
==== main.ts (0 errors) ====
    import { Foo as A } from "./a";
    import { Foo as B } from "./b";
    
    const a = new A();
    const b = new B();
    a.copy(b); // error
    